config/longhorn/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: load-balancer-longhorn
  name: longhorn-ui-loadbalancer
  namespace: longhorn-system
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    k8s-app: longhorn-ui
  type: LoadBalancer
