config/longhorn/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "storage.k8s.dev.calvinverse.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
